--- a/Job_Scout_Scrapy.ipynb
+++ b/Job_Scout_Scrapy.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<selenium.webdriver.remote.webelement.WebElement (session=\"6d53f691d4abaf9be3f060f27e026485\", element=\"f.093A401CDD0ACFABE85EF402E473AE54.d.474F376B0D34F33474DFA5577084B140.e.256\")>"
+       "<selenium.webdriver.remote.webelement.WebElement (session=\"2949356fc358308be4de9e1af7339458\", element=\"f.23FB5DE27951ED5C47B2015389C981AD.d.4AF751D9A2AB01AB0ED02D764FB79F14.e.241\")>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,20 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.jobscout24.ch/en/job/junior-business-development-manager-vertrieb/8837994/'"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#element = job_categories.text\n",
     "#job_categories.get_attribute('href')"
@@ -101,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +173,7 @@
        "  'url': 'https://www.jobscout24.ch/en/job/filialleiter-f%C3%BCr-unsere-standorte-basel-und-laufen/8837553/'}]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -245,11 +234,9 @@
        " {'job': 'Innendienst / Sachbearbeiter'},\n",
        " {'job': 'Sachbearbeiter/-in Administration AFK'},\n",
        " {'job': 'Sachbearbeiter*in HR Administration 60-100 %'},\n",
-       " {'job': 'Mitarbeiterin/Mitarbeiter Rezeption/Disposition (m/w/d) 50-60 %'},\n",
        " {'job': 'Sachbearbeiter/-in Backoffice 40-60%'},\n",
        " {'job': 'Sachbearbeiter/in Soziales 80 – 100 %'},\n",
        " {'job': 'Sachbearbeiter/in Dispo-Administration 100% (per sofort oder nach Vereinbarung)'},\n",
-       " {'job': 'Sachbearbeiter:in Kundendienst Kundenkarten (w/m/d)'},\n",
        " {'job': 'Mitarbeiter/in Empfang, Verkauf und Administration 60-100%'},\n",
        " {'job': 'Office Manager/in – Sachbearbeiter/in GL & Immobilien ( 60 – 80%)'},\n",
        " {'job': 'Mitarbeiter*in Assistenz und Empfang Teilzeit'},\n",
@@ -258,6 +245,8 @@
        " {'job': 'SEKRETARIAT / TELEFON'},\n",
        " {'job': 'Sachbearbeiter/in Kundendienst & Verkauf (100%)'},\n",
        " {'job': 'Kaufmännischer Sachbearbeiterin / Kaufmännischer Sachbearbeiter 100%'},\n",
+       " {'job': 'Sachbearbeiter/-in Ordnungsbussenwesen und Parkierung'},\n",
+       " {'job': 'Mitarbeiter/-in Empfang / Augenoptiker/-in 40- 80%'},\n",
        " {'job': 'Projektleiter/-in ; Kundenberater/-in (w/m) 80-100% (1x Grossraum Zürich / 1x Luzern und Innerschweiz)'},\n",
        " {'job': 'Sachbearbeiter/in Kundenservice 60% bis 100% Anstellung'},\n",
        " {'job': 'Product Owner (a) 80 - 100%'},\n",
@@ -327,12 +316,12 @@
        " {'job': 'Chauffeur Kat. C ab Juni oder Juli 2024 gesucht!'},\n",
        " {'job': 'ICT FACHPERSON MIT PÄDAGOGISCHEM HINTERGRUND (m/w/d) 80 - 100 %'},\n",
        " {'job': 'Immobilienbewirtschafter/In'},\n",
-       " {'job': 'Automobil-Mechatroniker oder -Diagnostiker (in / vor Ausbildung)'},\n",
+       " {'job': 'Immobilienbewirtschafter/in mit eidg. FA'},\n",
        " {'job': 'Polymechaniker:in Fachrichtung Formenbau (80-100%)'},\n",
        " {'job': 'Kunststofftechnologe / Kunststofftechnologin als Einrichter*in (m/w/d)'},\n",
        " {'job': 'Mechaniker (Werkzeugunterhalt / Montage m/w/d 100%'},\n",
-       " {'job': 'Technische/r Mitarbeiter/in als Eichmeister/in (100%)'},\n",
        " {'job': 'Projektleiter/-in ; Kundenberater/-in (w/m) 80-100% (1x Grossraum Zürich / 1x Luzern und Innerschweiz)'},\n",
+       " {'job': 'Technische/r Mitarbeiter/in als Eichmeister/in (100%)'},\n",
        " {'job': 'Technischer Mitarbeiter Staging'},\n",
        " {'job': 'Mehrere Fotografinnen in der ganzen Schweiz'},\n",
        " {'job': 'Polymechaniker (m/w)'},\n",
@@ -358,17 +347,20 @@
        " {'job': 'Zaunmonteur und Elektrotormonteur'},\n",
        " {'job': 'Logistiker/in, 100%'},\n",
        " {'job': 'Reha-Techniker*in, Fahrradmechaniker*in EFZ, Quereinsteiger*in 60-80%'},\n",
-       " {'job': 'Motorradmechaniker (m/w/d)'},\n",
        " {'job': 'Techn. Sachbearbeiter/in / Kalkulation 60 – 80%'},\n",
+       " {'job': 'Motorradmechaniker (m/w/d)'},\n",
        " {'job': 'Lehrkraft Deutsch, Französisch, Japanisch, Norwegisch, Koreanisch, Kroatisch'},\n",
        " {'job': 'Projektleiter/-in ; Kundenberater/-in (w/m) 80-100% (1x Grossraum Zürich / 1x Luzern und Innerschweiz)'},\n",
        " {'job': 'Junior Business Development Manager im Vertrieb'},\n",
+       " {'job': 'Mechaniker (Werkzeugunterhalt / Montage m/w/d 100%'},\n",
        " {'job': 'LKW-Mechaniker/in, Automobil-Mechatroniker/in 100%'},\n",
        " {'job': 'Sachbearbeiter/in Verkaufsinnendienst 100%'},\n",
        " {'job': 'Kommunikationsfreudige:r Call-Agent:in 40-80% in Hägendorf oder Home-Office'},\n",
-       " {'job': 'Web & Print-Projektmanager/-in 80 % in Wetzikon ZH'},\n",
        " {'job': 'Qualifizierte/n Näher/in (60% – 80%)'},\n",
        " {'job': 'Sachbearbeiter/in Verkaufsinnendienst 100%'},\n",
+       " {'job': 'Sachbearbeiter/in Sozial- und Personenversicherungen'},\n",
+       " {'job': 'sachbearbeiterin verkaufsinnendienst, 80-100% (w/m/d)'},\n",
+       " {'job': 'Sachbearbeiter/in Verkaufsinnendienst'},\n",
        " {'job': 'Sachbearbeiter/in Verkaufsinnendienst (m/w/d)'},\n",
        " {'job': 'Mitarbeiter im Verkaufsinnendienst 80-100% (a)'},\n",
        " {'job': 'Sachbearbeiter /-in Lieferscheinbüro / Verkaufsinnendienst'},\n",
@@ -379,15 +371,12 @@
        " {'job': 'Verkaufsinnendienst (m/w/d)'},\n",
        " {'job': 'Sachbearbeiter/in Verkaufsinnendienst mit Key-User Funktion SAP'},\n",
        " {'job': 'Sachbearbeiterin / Sachbearbeiter Verkaufsinnendienst & Export 80-100%'},\n",
-       " {'job': 'Sachbearbeiter Verkauf Innendienst 100% (m/w)'},\n",
-       " {'job': 'Sachbearbeiter Rechnungswesen (m/w) 100%'},\n",
-       " {'job': 'Sachbearbeiter Verkaufsinnendienst DE/FR 100% (m/w)'},\n",
-       " {'job': 'Sachbearbeiter im Verkaufsinnendienst 100% (m/w)'},\n",
        " {'job': 'Sachbearbeiter Administration und Verkaufsinnendienst 80% (m/w/d)'},\n",
        " {'job': 'Sachbearbeiter ambulante Leistungen (m/w/d)'},\n",
        " {'job': 'Sachbearbeiter / Sachbearbeiterin Administration Inspektionsstelle (m/w/d) (50-100% Job-Sharing)'},\n",
        " {'job': 'sachbearbeiterin verkaufsinnendienst und export m/w/d (90 - 100%)'},\n",
        " {'job': 'Sachbearbeiter/in Kundendienst & Empfang 80% -100%'},\n",
+       " {'job': 'Sachbearbeiter Verkaufsinnendienst (m/w/d) 80-100%'},\n",
        " {'job': 'Zaunmonteur und Elektrotormonteur'},\n",
        " {'job': 'Chauffeur B/E 100 % in Möhlin Per Sofort'},\n",
        " {'job': 'Fenstermonteur / Schreiner - Monteur 80-100% (m/w)'},\n",
@@ -460,14 +449,14 @@
        " {'job': 'Kunststofftechnologe / Kunststofftechnologin als Einrichter*in (m/w/d)'},\n",
        " {'job': 'Polymechaniker:in Fachrichtung Formenbau (80-100%)'},\n",
        " {'job': 'Zaunmonteur und Elektrotormonteur'},\n",
-       " {'job': 'Sachbearbeiter/in Verkaufsinnendienst 100%'},\n",
        " {'job': 'Junior Business Development Manager im Vertrieb'},\n",
+       " {'job': 'Sachbearbeiter/in Verkaufsinnendienst 100%'},\n",
        " {'job': 'Florist/in (50-100%) in Freienbach'},\n",
        " {'job': 'Service Management (m/w/d) im 100% Pensum'},\n",
        " {'job': 'Kaufmännische Mitarbeiter - AllrounderIn, 50 % (m/w) jeweils morgens'},\n",
        " {'job': 'Sachbearbeiter/in Buchhaltung & Personalwesen ab 50%'},\n",
        " {'job': 'Reha-Techniker*in, Fahrradmechaniker*in EFZ, Quereinsteiger*in 60-80%'},\n",
-       " {'job': 'Sachbearbeiter/in Kundenservice 60% bis 100% Anstellung'},\n",
+       " {'job': 'Fahrzeugaufbereiter/Allrounder Personenwagen (m/w/d) / 40-100%'},\n",
        " {'job': 'Chauffeur B/E 100 % in Möhlin Per Sofort'},\n",
        " {'job': 'Chauffeur/ Chauffeuse (m/w) Kat. B'},\n",
        " {'job': 'Chauffeur/-in Kat. B und Lagermitarbeiter/-in'},\n",
@@ -496,9 +485,9 @@
        " {'job': 'Mitarbeiter/in Produktion - Abteilung Schlifflabor 100%'},\n",
        " {'job': 'Polymechaniker:in Fachrichtung Formenbau (80-100%)'},\n",
        " {'job': 'Ersatzteilverkäufer / Spare Parts Manager Ferrari'},\n",
-       " {'job': 'Naildesignerin 60-100%'},\n",
        " {'job': 'Office Assistant'},\n",
        " {'job': 'Zaunmonteur und Elektrotormonteur'},\n",
+       " {'job': 'Naildesignerin 60-100%'},\n",
        " {'job': 'Car Chauffeur 80% - 100%'},\n",
        " {'job': 'Kursleiterin Deutsch als Fremdsprache (DaF/DaZ)'},\n",
        " {'job': 'Chauffeur B/E 100 % in Möhlin Per Sofort'},\n",
@@ -507,7 +496,7 @@
        " {'job': 'Regionalverkaufsleiter/-in | Aussendienstmitarbeiter/-in | Verkaufsprofi'},\n",
        " {'job': 'Mechaniker'},\n",
        " {'job': 'Fahrzeugaufbereiter/Allrounder Personenwagen (m/w/d) / 40-100%'},\n",
-       " {'job': 'Junior Business Development Manager im Vertrieb'},\n",
+       " {'job': 'Techn. Sachbearbeiter/in / Kalkulation 60 – 80%'},\n",
        " {'job': 'Aushilfschauffeur C E'},\n",
        " {'job': 'Chauffeur B/E 100 % in Möhlin Per Sofort'},\n",
        " {'job': 'Chauffeur Kat. C ab Juni oder Juli 2024 gesucht!'},\n",
@@ -538,12 +527,12 @@
        " {'job': 'Immobilienbewirtschafter/in 80% - 100%'},\n",
        " {'job': 'Werkstattleiter / Automobildiagnostiker 80-100%'},\n",
        " {'job': 'VERKAUFSBERATER PW/NFZ (m/w/d) 100 %'},\n",
-       " {'job': 'Sachbearbeiter*in Zentralstelle 80 - 100 %'},\n",
        " {'job': 'Zaunmonteur und Elektrotormonteur'},\n",
+       " {'job': 'Sachbearbeiter*in Zentralstelle 80 - 100 %'},\n",
+       " {'job': 'Automobil-Mechatroniker 80 - 100% bei Baschnagel Offroad (m/w/d)'},\n",
        " {'job': 'Sachbearbeiter/in Verkaufsinnendienst 100%'},\n",
        " {'job': 'Projektleiter/-in ; Kundenberater/-in (w/m) 80-100% (1x Grossraum Zürich / 1x Luzern und Innerschweiz)'},\n",
        " {'job': 'Sachbearbeiter/in Kundenservice 60% bis 100% Anstellung'},\n",
-       " {'job': 'Automobil-Mechatroniker 80 - 100% bei Baschnagel Offroad (m/w/d)'},\n",
        " {'job': 'Chauffeur B/E 100 % in Möhlin Per Sofort'},\n",
        " {'job': 'Aushilfschauffeur C E'},\n",
        " {'job': 'Automobil-Mechatroniker / Automobil-Fachmann / Automobil-Diagnostiker'},\n",
@@ -591,7 +580,7 @@
        " {'job': 'Filialleiter/in für unsere Standorte in Basel und Laufen (80-100%)'}]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +732,7 @@
        "[371 rows x 2 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
